# ForAristarh

./: CMakeLists.txt  test.cpp  tetris
html/: annotated.html  block_8h.html  block_8h__incl.map  block_8h__incl.md5  block_8h_source.html  build_2__deps_2raylib-build_2raylib_2include_2raylib_8h_source.html  build_2__deps_2raylib-build_2raylib_2include_2raymath_8h_source.html  build_2__deps_2raylib-build_2raylib_2include_2rlgl_8h_source.html  build_2__deps_2raylib-src_2examples_2others_2external_2include_2GLFW_2glfw3_8h.html  build_2__deps_2raylib-src_2examples_2others_2external_2include_2GLFW_2glfw3_8h__incl.map  build_2__deps_2raylib-src_2examples_2others_2external_2include_2GLFW_2glfw3_8h__incl.md5  build_2__deps_2raylib-src_2examples_2others_2external_2include_2GLFW_2glfw3_8h_source.html  build_2__deps_2raylib-src_2examples_2others_2external_2include_2GLFW_2glfw3native_8h.html  build_2__deps_2raylib-src_2examples_2others_2external_2include_2GLFW_2glfw3native_8h_source.html  build_2__deps_2raylib-src_2examples_2others_2external_2include_2glad_8h_source.html  build_2__deps_2raylib-src_2examples_2others_2external_2include_2glad__gles2_8h_source.html  build_2__deps_2raylib-src_2examples_2others_2reasings_8h_source.html  build_2__deps_2raylib-src_2examples_2others_2resources_2audio__data_8h_source.html  build_2__deps_2raylib-src_2examples_2others_2resources_2image__data_8h_source.html  build_2__deps_2raylib-src_2examples_2shaders_2rlights_8h_source.html  build_2__deps_2raylib-src_2examples_2shapes_2raygui_8h_source.html  build_2__deps_2raylib-src_2examples_2shapes_2reasings_8h_source.html  build_2__deps_2raylib-src_2projects_2Notepad_09_09_2raylib__npp__parser_2raylib__to__parse_8h_source.html  build_2__deps_2raylib-src_2projects_2VS2019-Android_2raylib__android_2raylib__android_8NativeAct9b0e45b0d22ba8f8971c545649d5c0d0_source.html  build_2__deps_2raylib-src_2src_2config_8h_source.html  build_2__deps_2raylib-src_2src_2external_2cgltf_8h_source.html  build_2__deps_2raylib-src_2src_2external_2dirent_8h_source.html  build_2__deps_2raylib-src_2src_2external_2dr__flac_8h_source.html  build_2__deps_2raylib-src_2src_2external_2dr__mp3_8h_source.html  build_2__deps_2raylib-src_2src_2external_2dr__wav_8h_source.html  (+3552 more)
latex/: annotated.tex  block_8h.tex  (+1095 more)
(+126 files in other folders)
